--- a/ScriptTest/ScriptTest.csproj
+++ b/ScriptTest/ScriptTest.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.1" />
+      <PackageReference Include="FastMember" Version="1.5.0" />
     </ItemGroup>
 
     <ItemGroup>
